--- a/College.html
+++ b/College.html
@@ -116,32 +116,32 @@
         <div class="gallery">
             <!-- Picture 1 -->
             <div class="gallery-item" onclick="openModal('This is a description for Picture 1.')">
-                <img src="Pic1.jpg" alt="Description of Picture 1">
+                <img src="pic1.jpg" alt="Description of Picture 1">
                 <span class="overlay">here i am in the 10th floor to participate for all students to be rewarded as dean's lister</span>
             </div>
             <!-- Picture 2 -->
             <div class="gallery-item" onclick="openModal('This is a description for Picture 2.')">
-                <img src="Pic2.jpg" alt="Description of Picture 2">
+                <img src="pic2.jpg" alt="Description of Picture 2">
                 <span class="overlay">me and the boys as dancers for the CSS in first day of 36th foundation day</span>
             </div>
             <!-- Picture 3 -->
             <div class="gallery-item" onclick="openModal('This is a description for Picture 3.')">
-                <img src="Pic3.jpg" alt="Description of Picture 3">
+                <img src="pic3.jpg" alt="Description of Picture 3">
                 <span class="overlay">Smile kay picturan daw HAHAHHA</span>
             </div>
             <!-- Picture 4 -->
             <div class="gallery-item" onclick="openModal('This is a description for Picture 4.')">
-                <img src="Pic4.jpg" alt="Description of Picture 4">
+                <img src="pic4.jpg" alt="Description of Picture 4">
                 <span class="overlay">taking a selfie before the event is starting</span>
             </div>
             <!-- Picture 5 -->
             <div class="gallery-item" onclick="openModal('This is a description for Picture 5.')">
-                <img src="Pic5.jpg" alt="Description of Picture 5">
+                <img src="pic5.jpg" alt="Description of Picture 5">
                 <span class="overlay">we are attending for the last event for the theatrical play and mr ambassador & ambassadress</span>
             </div>
             <!-- Picture 6 -->
             <div class="gallery-item" onclick="openModal('This is a description for Picture 6.')">
-                <img src="Pic6.jpg" alt="Description of Picture 6">
+                <img src="pic6.jpg" alt="Description of Picture 6">
                 <span class="overlay">taking a group for the members of la proza for giving their incredible performance and dedication for the craft and participate in the event</span>
             </div>
             
